--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 
     "require": {
         "php":                       ">=5.3.2",
-        "symfony/framework-bundle":  ">=2.0,<2.5-dev",
+        "symfony/framework-bundle":  ">=2.0,<3.0",
         "d11wtq/boris":              "*"
     },
 
